[package]
name = "rejectsynth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulse = { version = "2.0", package = "libpulse-binding" }
psimple = { version = "2.0", package = "libpulse-simple-binding" }
macro = { path = "./macro" }
dsl = { path = "./dsl" }

[workspace]
members = ["./", "macro", "dsl"]
